fix(tests): Corregir pruebas unitarias fallidas