@@ -4,135 +4,177 @@ import com.dylabs.zuko.dto.request.CreateRoleRequest;
 import com.dylabs.zuko.dto.response.RoleResponse;
 import com.dylabs.zuko.exception.roleExeptions.RoleAlreadyExistesException;
 import com.dylabs.zuko.exception.roleExeptions.RoleNotFoundException;
+import com.dylabs.zuko.exception.userExeptions.UserNotFoundExeption;
 import com.dylabs.zuko.mapper.RoleMapper;
 import com.dylabs.zuko.model.Role;
+import com.dylabs.zuko.model.User;
 import com.dylabs.zuko.repository.RoleRepository;
+import com.dylabs.zuko.repository.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class RoleServiceUnitTest {
-    private RoleRepository roleRepository;
-    private RoleMapper roleMapper;
-    private RoleService roleService;
+@ExtendWith(MockitoExtension.class)
+class RoleServiceTest {
+
+    @Mock private RoleRepository roleRepository;
+    @Mock private RoleMapper roleMapper;
+    @Mock private UserRepository userRepository;
+    @InjectMocks private RoleService roleService;
+
+    @Mock private SecurityContext securityContext;
+    @Mock private Authentication authentication;
+
+    private User adminUser;
+    private User normalUser;
 
     @BeforeEach
-    void setUp() {
-        roleRepository = mock(RoleRepository.class);
-        roleMapper = mock(RoleMapper.class);
-        roleService = new RoleService(roleRepository, roleMapper,);
+    void setup() {
+        adminUser = new User();
+        adminUser.setId(1L);
+        adminUser.setUsername("admin");
+        adminUser.setUserRoleName("Admin");
+
+        normalUser = new User();
+        normalUser.setId(2L);
+        normalUser.setUsername("user");
+        normalUser.setUserRoleName("User");
+
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
     }
 
     @Test
-    @DisplayName("CP01-HU21 - Crear rol correctamente")
-    void createRole_whenRoleDoesNotExist_shouldCreateAndReturnRoleResponse() {
-        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "Administrador");
-        Role roleEntity = new Role();
-        Role savedRole = new Role(1L, "ADMIN", "Administrador");
-        RoleResponse response = new RoleResponse(1L, "ADMIN", "Administrador");
+    void createRole_AsAdmin_Success() {
+        CreateRoleRequest req = new CreateRoleRequest("MOD", "Moderador");
+        Role role = new Role(1L, "MOD", "Moderador");
+        RoleResponse response = new RoleResponse(1L, "MOD", "Moderador");
 
-        when(roleRepository.existsByRoleNameIgnoreCase("ADMIN")).thenReturn(false);
-        when(roleMapper.toRoleEntity(request)).thenReturn(roleEntity);
-        when(roleRepository.save(roleEntity)).thenReturn(savedRole);
-        when(roleMapper.toResponse(savedRole)).thenReturn(response);
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
+        when(roleRepository.existsByRoleNameIgnoreCase("MOD")).thenReturn(false);
+        when(roleMapper.toRoleEntity(req)).thenReturn(role);
+        when(roleRepository.save(role)).thenReturn(role);
+        when(roleMapper.toResponse(role)).thenReturn(response);
 
-        RoleResponse result = roleService.createRole(request);
+        RoleResponse result = roleService.createRole(req);
 
-        assertEquals(response, result);
+        assertEquals("MOD", result.roleName());
     }
 
     @Test
-    @DisplayName("CP02-HU21 - Crear rol cuando ya existe debe lanzar excepción")
-    void createRole_whenRoleAlreadyExists_shouldThrowException() {
-        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "Administrador");
+    void createRole_AsNonAdmin_ThrowsAccessDenied() {
+        when(authentication.getName()).thenReturn("2");
+        when(userRepository.findById(2L)).thenReturn(Optional.of(normalUser));
 
-        when(roleRepository.existsByRoleNameIgnoreCase("ADMIN")).thenReturn(true);
-
-        assertThrows(RoleAlreadyExistesException.class, () -> roleService.createRole(request));
+        assertThrows(AccessDeniedException.class, () -> {
+            roleService.createRole(new CreateRoleRequest("MOD", "desc"));
+        });
     }
 
     @Test
-    @DisplayName("CP01-HU22 - Listar roles cuando hay registros debe devolver lista")
-    void getRoles_whenRolesExist_shouldReturnListOfRoleResponses() {
+    void createRole_AlreadyExists_ThrowsException() {
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
+        when(roleRepository.existsByRoleNameIgnoreCase("MOD"))
+                .thenReturn(true);
+
+        assertThrows(RoleAlreadyExistesException.class, () ->
+                roleService.createRole(new CreateRoleRequest("MOD", "desc"))
+        );
+    }
+
+    @Test
+    void getRoles_Success() {
         Role role = new Role(1L, "ADMIN", "Administrador");
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
         when(roleRepository.findAll()).thenReturn(List.of(role));
 
-        List<RoleResponse> responses = roleService.getRoles();
+        List<RoleResponse> result = roleService.getRoles();
 
-        assertEquals(1, responses.size());
-        assertEquals("ADMIN", responses.get(0).roleName());
+        assertEquals(1, result.size());
     }
 
     @Test
-    @DisplayName("CP02-HU22 - Listar roles cuando no hay registros debe lanzar excepción")
-    void getRoles_whenNoRoles_shouldThrowException() {
-        when(roleRepository.findAll()).thenReturn(List.of());
+    void getRoles_Empty_ThrowsException() {
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
+        when(roleRepository.findAll()).thenReturn(Collections.emptyList());
 
         assertThrows(RoleNotFoundException.class, () -> roleService.getRoles());
     }
 
     @Test
-    @DisplayName("CP01-HU20 - Actualizar rol existente con datos válidos debe retornar el nuevo rol")
-    void updateRole_whenValid_shouldUpdateAndReturnResponse() {
-        long id = 1L;
-        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "Actualizado");
-        Role existing = new Role(id, "ADMIN", "Antiguo");
-        Role updated = new Role(id, "ADMIN", "Actualizado");
-        RoleResponse response = new RoleResponse(id, "ADMIN", "Actualizado");
+    void updateRole_Success() {
+        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "Admin");
+        Role role = new Role(1L, "MOD", "Mod");
 
-        when(roleRepository.findById(id)).thenReturn(Optional.of(existing));
-        when(roleRepository.existsByRoleNameIgnoreCase("ADMIN")).thenReturn(true);
-        when(roleRepository.save(existing)).thenReturn(updated);
-        when(roleMapper.toResponse(updated)).thenReturn(response);
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
+        when(roleRepository.findById(1L)).thenReturn(Optional.of(role));
+        when(roleRepository.existsByRoleNameIgnoreCase("ADMIN")).thenReturn(false);
+        when(roleRepository.save(any())).thenReturn(role);
+        when(roleMapper.toResponse(any())).thenReturn(new RoleResponse(1L, "ADMIN", "Admin"));
 
-        RoleResponse result = roleService.updateRole(id, request);
+        RoleResponse response = roleService.updateRole(1L, request);
 
-        assertEquals("Actualizado", result.description());
+        assertEquals("ADMIN", response.roleName());
     }
 
     @Test
-    @DisplayName("CP02-HU20 - Actualizar rol cuando no existe debe lanzar excepción")
-    void updateRole_whenRoleNotFound_shouldThrowException() {
-        when(roleRepository.findById(1L)).thenReturn(Optional.empty());
+    void updateRole_AlreadyExistsWithDifferentName_ThrowsException() {
+        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "Admin");
+        Role role = new Role(1L, "MOD", "Mod");
 
-        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "desc");
-        assertThrows(RoleNotFoundException.class, () -> roleService.updateRole(1L, request));
-    }
-
-    @Test
-    @DisplayName("CP03-HU20 - Actualizar rol con nombre duplicado debe lanzar excepción")
-    void updateRole_whenRoleNameExistsWithDifferentName_shouldThrowException() {
-        Role existing = new Role(1L, "USER", "desc");
-        CreateRoleRequest request = new CreateRoleRequest("ADMIN", "nuevo");
-
-        when(roleRepository.findById(1L)).thenReturn(Optional.of(existing));
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
+        when(roleRepository.findById(1L)).thenReturn(Optional.of(role));
         when(roleRepository.existsByRoleNameIgnoreCase("ADMIN")).thenReturn(true);
 
-        assertThrows(RoleAlreadyExistesException.class, () -> roleService.updateRole(1L, request));
+        assertThrows(RoleAlreadyExistesException.class, () ->
+                roleService.updateRole(1L, request)
+        );
     }
 
     @Test
-    @DisplayName("CP01-HU19 - Eliminar rol existente debe borrarlo sin errores")
-    void deleteRole_whenRoleExists_shouldDelete() {
+    void deleteRole_Success() {
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
         when(roleRepository.existsById(1L)).thenReturn(true);
 
-        roleService.deleteRole(1L);
-
-        verify(roleRepository).deleteById(1L);
+        assertDoesNotThrow(() -> roleService.deleteRole(1L));
+        verify(roleRepository, times(1)).deleteById(1L);
     }
 
     @Test
-    @DisplayName("CP02-HU19 - Eliminar rol cuando no existe debe lanzar excepción")
-    void deleteRole_whenRoleNotFound_shouldThrowException() {
+    void deleteRole_NotFound_ThrowsException() {
+        when(authentication.getName()).thenReturn("1");
+        when(userRepository.findById(1L)).thenReturn(Optional.of(adminUser));
         when(roleRepository.existsById(1L)).thenReturn(false);
 
         assertThrows(RoleNotFoundException.class, () -> roleService.deleteRole(1L));
     }
 
-}
+    @Test
+    void getAuthenticatedUser_NotFound_ThrowsException() {
+        when(authentication.getName()).thenReturn("99");
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThrows(UserNotFoundExeption.class, () -> roleService.createRole(new CreateRoleRequest("R", "desc")));
+    }
+} 
